syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.donespeak.protoweb.protorest.account.proto.rest.api";

package account.rest.api;

import "core/rest.proto";
import "account/rest/data/account.proto";

message DeleteAccountRequest {
}

message DeleteAccountResponse {
}

message DeleteAccount {

    option (.rest.endpoint) = {method: "DELETE" path:"/account/{accountId}"};

    DeleteAccountRequest request = 1;
    DeleteAccountResponse response = 2;

    // 约定：path_variable 开头的命名均为路径参数
    int64 path_variable_account_id = 3;
}