syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.donespeak.protoweb.protorest.account.proto.rest.api";

package account.rest.api;

import "core/rest.proto";
import "account/rest/data/account.proto";

message UpdateAccountRequest {
    account.rest.data.Account account = 1;
}

message UpdateAccountResponse {
    account.rest.data.Account account = 1;
}

message UpdateAccount {

    option (.rest.endpoint) = {method: "PUT" path:"/account/{accountId}"};

    UpdateAccountRequest request = 1;
    UpdateAccountResponse response = 2;

    // 约定：path_variable 开头的命名均为路径参数
    int64 path_variable_account_id = 3;
}